# data-generator

./: .gitignore  pyproject.toml
src/data_generator/: datagen.py  exeptions.py  utils.py
src/data_generator/helpers/: __init__.py  df_to_log.py  file_reader.py
tests/: test_datagen.py
