# pyproject.toml
[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = "This repo is for generating data from existing dataset to a file or producing dataset rows as message to kafka in a streaming manner."
authors = ["erkansirin78 <erkansirin78@hotmail.com>", "kayademirs <s.kayademir@gmail.com>", "cemalcici <iecemalcici@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/erkansirin78/data-generator"
repository = "https://github.com/erkansirin78/data-generator"    
keywords = ["streaming", "data", "generator"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
kafka-python = "2.0.2"
pandas = "<=1.4.3"
pyarrow = "^15.0.2"
sqlalchemy = "1.4.41"
psycopg2-binary = "2.9.3"
boto3 = "<=1.24.92"

[tool.poetry.scripts]
data-generator = "data_generator.datagen:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
